2005-01-31  Christian Mohn <h0bbel@p0ggel.org> 1.5-cvs-b334

    Fix: Typo in setup/config_data.inc (Thanks bytenik)

2005-01-30  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b333

    * Fix: Ensure that if $album->photos is not empty, we save it to
      photos.dat - don't simply rely on transient->photosloaded being
      true, because if the photos somehow got stored in album.dat, this
      would fail.

    * Fix: Couple more possible unset-varaible issues

2005-01-30  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b332

    * Fix: Several unset variable issues

2005-01-26  Don Willingham <donwillingham@users.sf.net>  1.5-cvs-b331

    * Fix: Bug#1108825: [G1] pnmcomp renamed to pamcomp
	pnmcomp configured like pnmtojpeg
    * Fix: pnmcomp new checked in check_netpbm.php(diagnostic)
    * Fix: pnmtojpeg properly checked in confirm.inc

2005-01-26  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b330

    * Fix: bubbles skin

    * Fix: broken html in stats.

    * Change: use of '"' instead of "\"" and some layouts in stats.php

2005-01-25  Christian Mohn <h0bbel@p0ggel.org> 1.5-cvs-b329

    * Fix: Bad grammar in setup/config_data.inc (Fotokasten)

2005-01-25  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b328

    * Change: Way of css.
              css/base.css is loaded EVERYTIME.
	      css/screen.css is loaded in standalone, no skin.
	      css/embeddeded.css is loaded when embedded.
	      <skin>/css/screen.css is loaed when standalone with skin.
    
      - css/embedded_style.css.default is now EMPTY per default
      - removed css/standalone_style.css.default.
      - modified getStyleSheetLink(), _getStyleSheetLink().
      - outsourced/created getGalleryBase().
      - adjust jenskin.

      TODO: adjust other skins.

    * Change: Iconified Slideshow(s)

    * Change: refactored available_skins(), output is now sorted.

    * Fix: set margin:0px for all forms via css, because IE render them bad.
