@@ -1,3 +1,11 @@
+2005-01-31  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b335
+
+    * Fix: Prevent error if the user requesting the new password link
+      doesn't exist anymore.
+
+    * Change: Received the mPUSH associate account creation link from 
+      Jon, and was finally able to link it up in the config wizard
+
 2005-01-31  Christian Mohn <h0bbel@p0ggel.org> 1.5-cvs-b334
 
     Fix: Typo in setup/config_data.inc (Thanks bytenik)
